# gmail-mcp

./: .env.example  .envrc  .gitignore  CLAUDE.md  README.md  TODO.md  docker-compose.local.yml  pyproject.toml
.claude/: settings.local.json
.cursor/: run_gmail_mcp.sh  run_gmail_mcp_docker.sh  run_gmail_mcp_uv.sh
.github/workflows/: ci.yml
mcp_gmail/: __init__.py  config.py  gmail.py  server.py
scripts/: test_gmail_setup.py
src/: __init__.py  config.py  dual_logger.py  gmail.py  helpers.py  models.py  server.py
tests/: conftest.py  test_config.py
